<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.felipe.mycalculator.MainActivity"
    android:background="#c66b26"
    android:padding="0dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="207dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tela"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"
        android:background="#d5ebce"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="bottom|right"
        android:textSize="70sp"
        android:maxLines="2"
        android:maxLength="17"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn7"
        android:id="@+id/btn7"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn8"
        android:id="@+id/btn8"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:layout_alignTop="@+id/btn7"
        android:layout_toEndOf="@+id/btn7"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn9"
        android:id="@+id/btn9"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:layout_alignTop="@+id/btn8"
        android:layout_toEndOf="@+id/btn8"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btnDiv"
        android:id="@+id/btnDiv"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#b89456"
        android:layout_alignTop="@+id/btn9"
        android:layout_toEndOf="@+id/btn9"
        android:onClick="onClickOperator"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn4"
        android:id="@+id/btn4"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:layout_below="@+id/btn7"
        android:layout_alignStart="@+id/btn7"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn1"
        android:id="@+id/btn1"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:layout_below="@+id/btn4"
        android:layout_alignLeft="@+id/btn7"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btnClear"
        android:id="@+id/btnClear"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#b14444"
        android:layout_below="@+id/btn1"
        android:layout_alignLeft="@+id/btn7"
        android:onClick="onClickClear"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn5"
        android:id="@+id/btn5"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:layout_below="@+id/btn7"
        android:layout_toEndOf="@+id/btn4"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn2"
        android:id="@+id/btn2"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:layout_below="@+id/btn5"
        android:layout_toRightOf="@+id/btn4"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn0"
        android:id="@+id/btn0"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:layout_below="@+id/btn2"
        android:layout_toRightOf="@+id/btn4"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn6"
        android:id="@+id/btn6"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:layout_below="@+id/btn8"
        android:layout_toEndOf="@+id/btn5"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btn3"
        android:id="@+id/btn3"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#707070"
        android:layout_below="@+id/btn6"
        android:layout_toRightOf="@+id/btn5"
        android:onClick="onClickNumber"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btnEqual"
        android:id="@+id/btnEqual"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#46af4b"
        android:layout_below="@+id/btn3"
        android:layout_toRightOf="@+id/btn5"
        android:onClick="onClickEqual"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btnMult"
        android:id="@+id/btnMult"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#b89456"
        android:layout_below="@+id/btn9"
        android:layout_toEndOf="@+id/btn9"
        android:onClick="onClickOperator"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btnPlus"
        android:id="@+id/btnPlus"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#b89456"
        android:layout_below="@+id/btnMinus"
        android:layout_toRightOf="@+id/btn9"
        android:onClick="onClickOperator"
        android:textStyle="bold" />

    <Button
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:text="@string/btnMinus"
        android:id="@+id/btnMinus"
        android:padding="0dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#b89456"
        android:layout_below="@+id/btnMult"
        android:layout_toRightOf="@+id/btn9"
        android:onClick="onClickOperator"
        android:textStyle="bold" />

</RelativeLayout>
